force-app/main/default/objects/MaskSObjectError__c/MaskSObjectError__c.object-meta.xml
<CustomObject>
    <description>Contains information about the errors during sobject masking. The error creation can be disabled in custom metadata settings.</description>
    <label>Mask SObject Error</label>
    <nameField>
        <label>Mask SObject Error Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mask SObject Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>