force-app/main/default/objects/MaskSObjectError__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <description>Information about the error occurred  during masking</description>
    <label>Error</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>