force-app/main/default/objects/MaskSObjectError__c/fields/JobId__c.field-meta.xml
<CustomField>
    <fullName>JobId__c</fullName>
    <description>AsyncApexjob record id</description>
    <label>JobId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>