force-app/main/default/objects/MaskSObjectError__c/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <description>SObject RecordId</description>
    <label>RecordId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>