force-app/main/default/objects/MaskSObjectError__c/fields/SObject__c.field-meta.xml
<CustomField>
    <fullName>SObject__c</fullName>
    <description>Contains the API name of the object</description>
    <label>SObject</label>
    <length>100</length>
    <type>Text</type>
</CustomField>